--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "mike wakerly <opensource@hoho.com>",
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "bootswatch": "^4.4.1",
     "gatsby": "^2.20.12",
     "gatsby-image": "^2.3.1",
     "gatsby-plugin-manifest": "^2.3.3",
